# frio

./: Cargo.toml  README.md  benchmark.py  benchmark.sh  benchmark_final.csv  frio.pyi  main.py  pyproject.toml
src/: lib.rs  scanner.rs
tests/: test_basic.py
